# kur_7_drf

./: .env.sample  .flake8  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
config/: settings.py  urls.py
fixtures/: habits.json
habits/: admin.py  models.py  serializers.py  services.py  tests.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  urls.py
users/management/commands/: csu.py  cu.py
users/migrations/: 0001_initial.py
